# This file is part of QCxMS-2.

srcs += files(
'xtb_mctc_accuracy.f90',
'xtb_mctc_constants.f90',
'xtb_mctc_convert.f90',
'xtb_mctc_symbols.f90',
'xtb_mctc_resize.f90',
'boxmuller.f90',
'iee.f90',
'mcsimu.f90',
'cid.f90',
'tsmod.f90',
'iomod.f90',
'qcxms2_data.f90',
'argparser.f90',
'fragmentation.f90',
'qmmod.f90',
'charges.f90',
'utility.f90',
'plot.f90',
'readl.f90',
'timing.f90',
'reaction.f90',
'isotopes.f90',
'header.f90',
'structools.f90'
)

prog += files(
'main.f90'
)

